# velma_openrave

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: __init__.py  openraveinstance.py
